searchable option menu

--- a/app/index.html
+++ b/app/index.html
@@ -27,14 +27,10 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-controller="MainCtrl">
       <div class="header">
-        <!--<ul class="nav nav-pills pull-right">-->
-          <!--<li class="active"><a ng-href="#">Home</a></li>-->
-          <!--<li><a ng-href="#">About</a></li>-->
-          <!--<li><a ng-href="#">Contact</a></li>-->
-        <!--</ul>-->
-
         <h3 class="text-muted">Blue Angular Ui</h3>
       </div>
+
+      <search-option data="searchOptionData"></search-option>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -64,6 +60,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/directives/search-option.js"></script>
     <!-- endbuild -->
   </body>
 </html>
