--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,9 @@
         <h3 class="text-muted">Blue Angular Ui</h3>
       </div>
 
-      <search-option data="searchOptionData" searchable="true" item-click="searchOptionClick"></search-option>
+      <search-option data="searchOptionData"
+                     searchable="true"
+                     item-click="searchOptionClick"></search-option>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
