--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/search-option.css">
     <!-- endbuild -->
   </head>
 
@@ -30,7 +31,8 @@
         <h3 class="text-muted">Blue Angular Ui</h3>
       </div>
 
-      <search-option data="searchOptionData"
+      <search-option option-title="'Select Option'"
+                     data="searchOptionData"
                      searchable="true"
                      item-click="searchOptionClick"></search-option>
     </div>
