option menu styles

--- a/app/index.html
+++ b/app/index.html
@@ -31,10 +31,13 @@
         <h3 class="text-muted">Blue Angular Ui</h3>
       </div>
 
+      <h4>Searchable options menu</h4>
+
       <search-option option-title="'Select Option'"
                      data="searchOptionData"
                      searchable="true"
                      item-click="searchOptionClick"></search-option>
+
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
