add navbar active function

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/search-option.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <!-- endbuild -->
   </head>
 
@@ -29,7 +30,7 @@
     <div class="container" ng-controller="MainCtrl">
       <!-- Navbar-->
       <h4>Navbar</h4>
-      <navbar></navbar>
+      <navbar data="navbarData"></navbar>
 
       <!-- Searchable option menu -->
       <h4>Searchable option menu</h4>
