Fix url hashbang comparison

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <div class="container" ng-controller="MainCtrl">
       <!-- Navbar-->
       <h4>Navbar</h4>
-      <navbar data="navbarData"></navbar>
+      <navbar data="navbarData" navbar-title="'Navbar'"></navbar>
 
       <!-- Searchable option menu -->
       <h4>Searchable option menu</h4>
