--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/search-option.css">
     <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/grid.css">
     <!-- endbuild -->
   </head>
 
@@ -39,6 +40,8 @@
                      searchable="true"
                      item-click="searchOptionClick"></search-option>
 
+      <h4>Grid</h4>
+      <grid></grid>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -70,6 +73,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/search-option.js"></script>
     <script src="scripts/directives/navbar.js"></script>
+    <script src="scripts/directives/grid.js"></script>
     <!-- endbuild -->
   </body>
 </html>
