add grid directive

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
                      item-click="searchOptionClick"></search-option>
 
       <h4>Grid</h4>
-      <grid></grid>
+      <grid data="gridData"></grid>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
