--- a/app/index.html
+++ b/app/index.html
@@ -40,8 +40,9 @@
                      searchable="true"
                      item-click="searchOptionClick"></search-option>
 
+      <!-- Grid -->
       <h4>Grid</h4>
-      <grid data="gridData"></grid>
+      <grid data="gridData" grid-model="gridModel"></grid>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
